--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,17 @@
-{%- include default.html -%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>{{ site.title }}</h1>
+      </header>
+      <main>{{ content }}</main>
+    </div>
+  </body>
+</html>
