--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,11 @@
 ---
 layout: default
 ---
-{% include post.html %}
+
+<article class="post">
+  <header>
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.date | date: "%B %-d, %Y" }}</p>
+  </header>
+  {{ content }}
+</article>
